tests/cfg/js/error/astRewrite/parse_asi4.js
/* from http://inimino.org/~inimino/blog/javascript_semicolons */
return {
  i:i, j:j}
return (
  {i:i, j:j})
return {i:i
       ,j:j}
continue innerloop
continue
  innerloop
throw new MyComplexError(a, b, c, more, args);
throw new MyComplexError(
  a, b, c, more, args);

return obj.method('abc')
          .method('xyz')
          .method('pqr')

return "a long string\n"
     + "continued across\n"
     + "several lines"

totalArea = rect_a.height * rect_a.width
          + rect_b.height * rect_b.width
          + circ.radius * circ.radius * Math.PI

function f(x) { return x*x }
f(7)
"a string".length
